	interface to gdk_gc_predraw and _postdraw.

	* gdk/win32/gdkwin32.h
	* gdk/gdk.def: Add gdk_win32_hdc_{get,release}.

	* gdk/win32/gdkcolor-win32.c (gdk_colormap_alloc1): Remove
	extraneous semicolon.

	* gdk/win32/gdkdrawable-win32.c: Check also for pen_width == 0.

	* gdk/win32/gdkimage-win32.c (gdk_image_new): Use the visual's depth,
	not the Win32 bitspixel value.

Tue Jul 11 20:59:35 2000  Tim Janik  <timj@gtk.org>

	* docs/tutorial/gtk_tut_12.es.sgml (name): 
	* docs/tutorial/gtk_tut_it.sgml (name): 
	* docs/tutorial/gtk_tut_fr.sgml (name): 
	* docs/tutorial/gtk_tut.sgml (name): scratched notion of completely
	outdated email adress: s/timj@psynet.net/timj@gtk.org/.

Tue Jul 11 13:10:57 BST 2000  Tony Gale <gale@gtk.org>

	* docs/faq/gtk-faq.sgml: Cleanup indenting and various
	  small changes.

Tue Jul 11 08:04:58 2000  Tim Janik  <timj@gtk.org>

        * gtk/gtktree.c (gtk_real_tree_select_child): eek, i've never seen
        a bug here, never been here and never fixed anything ;(
        (don't segfault if tree->root_tree is NULL, which happens prior
        to widget realization, but puke instead).

Tue Jul 11 06:38:42 2000  Tim Janik  <timj@gtk.org>

	* gtk/gtkrc.h: add xthickness and ythickness to GtkRcStyle and
	add the necessary tokens.

	* gtk/gtkrc.c (gtk_rc_style_init): properly initiality the rc style.
	(gtk_rc_style_to_style): copy thicknesses.
	(gtk_rc_init_style): apply thicknesses.
	(gtk_rc_parse_style): parse xthickness and ythickness.

	* gdk/x11/gdkdnd-x11.c: silence compiler in switch() statements.

	* gdk/x11/gdkwindow-x11.c (gdk_window_foreign_new): 
	(gdk_window_new): 
	(_gdk_windowing_window_init): 
	* gdk/x11/gdkpixmap-x11.c (gdk_pixmap_foreign_new): 
	(gdk_pixmap_create_from_data): 
	(gdk_bitmap_create_from_data): 
	(gdk_pixmap_new): 
	* gdk/x11/gdkimage-x11.c (gdk_image_get): 
	(gdk_image_new): 
	* gdk/x11/gdkgc-x11.c (_gdk_x11_gc_new): 
	* gdk/x11/gdkdnd-x11.c (gdk_drag_context_new): 
	* gdk/x11/gdkcolor-x11.c (gdkx_colormap_get):